--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <h1 id="moji1">１　キョムの顔とは/What is Kyomu's face?</h1>
                     <h1 id="moji1">２　分類/classification</h1>
                     <h1 id="moji1">３　ガチャガチャへの展開/Expansion to Gacha Gacha</h1>
+                     <img src="line.png" alt="ロゴ" id="photo">
                     <h1 id="moji1">１　キョムの顔とは/What is Kyomu's face?</h1>
                     <h1 id="moji1">１−１　一般的な表情のシステム</h1>
                     <h1 id="moji1">１−１　general facial expression system</h1>
@@ -56,12 +57,19 @@
                     <h1 id="moji1">以上のことより、「キョムの顔は必ずしも喜怒哀楽と感情に関係性があるわけではない。」と仮定した。また、「喜怒哀楽とは切り離された表情を、キョムの顔として表情の一分野として定義」することとした。
                     </h1>
                     <h1 id="moji1">Based on the above, I assumed that ``Kyom's face is not necessarily related to emotions and emotions.'' In addition, it was decided to ``define facial expressions separated from emotions as a field of facial expressions as Kyomu's face.''</h1>
+                     <img src="line.png" alt="ロゴ" id="photo">
+                    <h1 id="moji1">２　分類/classification</h1>
+                    <h1 id="moji1">２−１　調査方法/Survey method</h1>
+                    <h1 id="moji1">電車の乗客、通行人、大学内、家庭内においてカメラで撮影することで無作為にキョムの顔のサンプルを50個ほど収集した。</h1>
+                    <h1 id="moji1">About 50 samples of Kyomu's face were randomly collected by photographing train passengers, passers-by, university, and home.</h1>
+                    <img src="zu6.png" alt="ロゴ" id="photo">
+                    
                     <h1 id="moji1">２−２　分類方法/Classification method</h1>
                     <h1 id="moji1">２−１ー１　顔の形状の個性の排除</h1>
                     <h1 id="moji1">２−１−１　Elimination of facial shape individuality</h1>
                     <h1 id="moji1">分類する要素を顔の個性によって左右されるものではなく、表情に注目をした。具体的には顔の各々のパーツの形状ではなく、顔のパーツの動きに注目をした。</h1>
                     <h1 id="moji1">The elements to be classified are not determined by the personality of the face, but focused on facial expressions. Specifically, I focused on the movement of facial parts rather than the shape of each facial part.</h1>
-                    <img src="zu6.png" alt="ロゴ" id="photo">
+                   
                     <h1 id="moji1">２−１−２　喜怒哀楽（感情）の排除</h1>
                     <h1 id="moji1">２−１−２　Elimination of emotions</h1>
                     <h1 id="moji1">キョムの顔は喜怒哀楽といった感情とは関係性がないと仮定したため、その源である、シーンやアクションといった外的要因を排除して分類した。具体的には、印刷したキョムの顔の顔の部分のみを切り出し、その他の周りの様子や、本人のアクション等が特定できない形とした。</h1>
@@ -72,6 +80,7 @@
                     </h1>
                     <img src="zu4.png" alt="ロゴ" id="photo">
                     <img src="zu5.png" alt="ロゴ" id="photo">
+                    <img src="line.png" alt="ロゴ" id="photo">
                     <h1 id="moji1">３　ガチャガチャへの展開</h1>
                     <h1 id="moji1">３　Expansion to Gacha Gacha</h1>
                     <h1 id="moji1">３−１　分類要素のデフォルメ</h1>
