--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                     <img src="zu5.png" alt="ロゴ" id="photo">
                     <img src="line.png" alt="ロゴ" id="photo">
                     <h1 id="moji1">３　ガチャガチャへの展開</h1>
+                    <h1><a href="https://yasunobuidei.github.io/cosmofit.github.io/">→Gachagachaを見る</a></h1>
                     <h1 id="moji1">３　Expansion to Gacha Gacha</h1>
                     <h1 id="moji1">３−１　分類要素のデフォルメ</h1>
                     <h1 id="moji1">３−１　Deformation of classification elements</h1>
